fixed video trailer not playing, added rotation for video on mobile device

--- a/src/components/FullscreenPlayer/FullscreenPlayer.scss
+++ b/src/components/FullscreenPlayer/FullscreenPlayer.scss
@@ -5,9 +5,13 @@
     width: $background-width; height: $background-height;
     background: $primary-black; display: grid; place-items: center;
 
+    .mobile-rotate{ transform: rotate(90deg);  position: absolute; }
+
     .back-arrow{ 
-        position: absolute; top: 1rem; left: 0;
+        position: absolute; top: 1rem; left: 1rem;
         height: 4%; width: 4%; color: $color-white; 
+        
+        @media screen and (max-width: 500px) { left: 1rem; top: 0; height: 7%; width: 7%; }
     }
 
     .fullscreen-video-player{
